--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ __pycache__/
 *.so
 
 # ignore config.py
-# config.py
-# pollevbot/config.py
-# *config.py
+config.py
+pollevbot/config.py
+*config.py
 
 # Distribution / packaging
 .Python
